--- a/Animation/Base.lproj/Main.storyboard
+++ b/Animation/Base.lproj/Main.storyboard
@@ -36,12 +36,25 @@
                                     <action selector="animate:" destination="BYZ-38-t0r" eventType="touchUpInside" id="91k-Rx-7K3"/>
                                 </connections>
                             </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Alien" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="43h-5Z-Cta">
+                                <rect key="frame" x="110" y="20" width="100" height="46"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="WX9-Jv-aSP"/>
+                                    <constraint firstAttribute="height" constant="46" id="eqP-eY-DBY"/>
+                                </constraints>
+                                <fontDescription key="fontDescription" type="system" pointSize="45"/>
+                                <color key="textColor" red="0.50196081400000003" green="1" blue="0.0" alpha="1" colorSpace="calibratedRGB"/>
+                                <nil key="highlightedColor"/>
+                            </label>
                         </subviews>
                         <color key="backgroundColor" red="0.29803922770000002" green="0.29803922770000002" blue="0.29803922770000002" alpha="1" colorSpace="calibratedRGB"/>
+                        <gestureRecognizers/>
                         <constraints>
+                            <constraint firstItem="43h-5Z-Cta" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="BX6-TD-YQl"/>
                             <constraint firstItem="aQT-v2-nWo" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="VwI-AW-fBc"/>
                             <constraint firstItem="aQT-v2-nWo" firstAttribute="top" secondItem="wUy-da-7c5" secondAttribute="bottom" constant="31" id="XRC-r3-iBC"/>
                             <constraint firstItem="wUy-da-7c5" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="54" id="Z2V-yT-R3z"/>
+                            <constraint firstItem="43h-5Z-Cta" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="h7g-te-spR"/>
                             <constraint firstItem="wUy-da-7c5" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="qcP-lU-Xsw"/>
                         </constraints>
                     </view>
@@ -53,7 +66,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="380" y="265"/>
+            <point key="canvasLocation" x="118" y="260"/>
         </scene>
     </scenes>
     <resources>
